--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="error">
-            <p>Invalid City Name</p>
+            <p>Nome da Cidade Inválido</p>
         </div>
 
         <div class="weather">
@@ -26,14 +26,14 @@
                     <img src="images/humidity.png">
                     <div>
                         <p class="humidity">50%</p>
-                        <p>Humidity</p>
+                        <p>Umidade</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="images/wind.png">
                     <div>
                         <p class="wind">15 Km/h</p>
-                        <p>Wind Speed</p>
+                        <p>Vento</p>
                     </div>
                 </div>
 
