--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="enter the city name" spellcheck="false">
+            <input type="text" placeholder="Nome da Cidade" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
 
